--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
     ="setTimeout(drightUp,1);"
     >Move</button>
 
+
+ <button type="button"ontouchstart="arightDown2()" 
+  ontouchend
+  ="setTimeout(arightUp2,1);"
+  >Move</button> 
+
+    <button type="button"ontouchstart="brightDown2()" 
+    ontouchend
+    ="setTimeout(brightUp2,1);"
+    >Move</button>
+
+    <button type="button"ontouchstart="crightDown2()" 
+    ontouchend
+    ="setTimeout(crightUp2,1);"
+    >Move</button>
+
+    <button type="button"ontouchstart="drightDown2()" 
+    ontouchend
+    ="setTimeout(drightUp2,1);"
+    >Move</button>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js"></script>
  <script src="script.js"></script>
 </body>
