index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -6,50 +6,16 @@
   <title>three</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-  <body><label class="unselectable">
+  <body type="button"ontouchstart="brightDown()" 
+  ontouchend
+  ="setTimeout(brightUp,1);"
+  
+><label class="unselectable">
   <div id="test"></div>
   
 
-  <button type="button"ontouchstart="arightDown()" 
-  ontouchend
-  ="setTimeout(arightUp,1);"
-  >Move</button> 
 
-    <button type="button"ontouchstart="brightDown()" 
-    ontouchend
-    ="setTimeout(brightUp,1);"
-    >Move</button>
-
-    <button type="button"ontouchstart="crightDown()" 
-    ontouchend
-    ="setTimeout(crightUp,1);"
-    >Move</button>
-
-    <button type="button"ontouchstart="drightDown()" 
-    ontouchend
-    ="setTimeout(drightUp,1);"
-    >Move</button>
-
-
- <button type="button"ontouchstart="arightDown2()" 
-  ontouchend
-  ="setTimeout(arightUp2,1);"
-  >Move</button> 
-
-    <button type="button"ontouchstart="brightDown2()" 
-    ontouchend
-    ="setTimeout(brightUp2,1);"
-    >Move</button>
-
-    <button type="button"ontouchstart="crightDown2()" 
-    ontouchend
-    ="setTimeout(crightUp2,1);"
-    >Move</button>
-
-    <button type="button"ontouchstart="drightDown2()" 
-    ontouchend
-    ="setTimeout(drightUp2,1);"
-    >Move</button>
+  
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js"></script>
  <script src="script.js"></script>
