--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
   <body><label class="unselectable">
   <div id="test"></div>
-  
+  <!--
 
  <button type="button"ontouchstart="arightDown2()" 
   ontouchend
@@ -53,8 +53,132 @@
     ontouchend
     ="setTimeout(drightUp2,1);"
     >MoveF</button>
+-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js"></script>
  <script src="script.js"></script>
 </body>
+
+<!--
 </html>
+
+
+
+<!DOCTYPE HTML>
+
+<html>
+	<head>
+		<title>Joy</title>
+		<meta charset="utf-8">
+		<meta name="description" content="Example page of use pure Javascript JoyStick">
+		<meta name="author" content="Roberto D'Amico">
+		<link rel="shortcut icon" type="image/png" href="http://bobboteck.github.io/img/roberto-damico-bobboteck.png">
+
+-->
+
+<head>
+		<style>
+*
+{
+	box-sizing: border-box;
+}
+body
+{
+	margin: 0px;
+	padding: 0px;
+	font-family: monospace;
+   
+ 
+}
+.row
+{
+	display: inline-flex;
+	clear: both;
+}
+.columnLateral
+{
+  float: right;
+  width: 15%;
+  min-width: 300px;
+}
+.columnCetral
+{
+  float: right;
+  width: 70%;
+  min-width: 300px;
+}
+
+
+.container
+{ 
+  float: right;
+  width: 15%;
+  min-width: 300px;
+
+}
+
+#joy2Div
+{
+	width:200px;
+	height:200px;
+	margin:600px
+ 
+}
+<
+
+#joystick2
+{
+	border: 1px solid #0000FF;
+}
+
+		</style>
+		<script src="script.js"></script>
+	</head>
+	<body>
+	
+	
+				
+		<!--	</div>-->
+<!--
+			<div class="columnLateral">
+--> 
+<button id="PAW" class="pauseButton">Pause</button>
+
+
+            <div class="container">
+				<div id="joy2Div"></div><!-- 
+				Posizione X:<input id="joy2PosizioneX" type="text" /></br>
+				Posizione Y:<input id="joy2PosizioneY" type="text" /></br>
+				Direzione:<input id="joy2Direzione" type="text" /></br>
+				X :<input id="joy2X" type="text" /></br>
+				Y :<input id="joy2Y" type="text" />
+			</div>			
+		</div> -->
+		<script type="text/javascript">
+// Create JoyStick object into the DIV 'joy1Div'
+//var Joy1 = new JoyStick('joy1Div');
+
+// Create JoyStick object into the DIV 'joy2Div'
+var joy2Param = { "title": "joystick2", "autoReturnToCenter": true };
+var Joy2 = new JoyStick('joy2Div', joy2Param);
+
+var joy2IinputPosX = document.getElementById("joy2PosizioneX");
+var joy2InputPosY = document.getElementById("joy2PosizioneY");
+var joy2Direzione = document.getElementById("joy2Direzione");
+var joy2X = document.getElementById("joy2X");
+var joy2Y = document.getElementById("joy2Y");
+
+setInterval(function(){ joy2IinputPosX.value=Joy2.GetPosX(); }, 50);
+setInterval(function(){ joy2InputPosY.value=Joy2.GetPosY(); }, 50);
+setInterval(function(){ joy2Direzione.value=Joy2.GetDir(); }, 50);
+setInterval(function(){ joy2X.value=Joy2.GetX(); }, 50);
+setInterval(function(){ joy2Y.value=Joy2.GetY(); }, 50);
+
+/*
+setInterval (function(){if(Joy2.GetPosX()<51)
+{alert();}},50);
+*/
+		</script>
+	</body>
+</html>
+
