--- a/index2.html
+++ b/index2.html
@@ -1,123 +1,184 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Firebase Chat mit Login</title>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-  <style>
-    body { font-family: Arial; max-width: 600px; margin: auto; padding: 20px; }
-    #messages { border: 1px solid #ccc; height: 300px; overflow-y: scroll; padding: 10px; }
-    .msg { margin-bottom: 10px; border-bottom: 1px solid #eee; padding-bottom: 5px; }
-    .own { background-color: #e6ffe6; }
-    .delete-btn { color: red; cursor: pointer; margin-left: 10px; font-size: 12px; }
-    #chatControls { margin-top: 10px; }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width" />
+  <title>three</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+  <body><label class="unselectable">
+  <div id="test"></div>
+  <!--
 
-  <h2>Firebase Chat mit Google Login</h2>
+ <button type="button"ontouchstart="arightDown2()" 
+  ontouchend
+  ="setTimeout(arightUp2,1);"
+  >RotaL</button> 
+
+    <button type="button"ontouchstart="brightDown2()" 
+    ontouchend
+    ="setTimeout(brightUp2,1);"
+    >RotaR</button>
+
+  <button type="button"ontouchstart="brightDown()" 
+    ontouchend
+    ="setTimeout(brightUp,1);"
+    >Jump</button>
+
+  <button type="button"ontouchstart="arightDown()" 
+  ontouchend
+  ="setTimeout(arightUp,1);"
+  >X</button> 
+
   
-  <button id="loginBtn">Mit Google anmelden</button>
-  <button id="logoutBtn" style="display:none;">Abmelden</button>
-  <p id="userInfo"></p>
 
-  <div id="messages"></div>
+    <button type="button"ontouchstart="crightDown()" 
+    ontouchend
+    ="setTimeout(crightUp,1);"
+    >X</button>
 
-  <div id="chatControls" style="display:none;">
-    <input type="text" id="messageInput" placeholder="Nachricht..." />
-    <button onclick="sendMessage()">Senden</button>
-  </div>
+    <button type="button"ontouchstart="drightDown()" 
+    ontouchend
+    ="setTimeout(drightUp,1);"
+    >Shoot</button>
 
-  <script>
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBUoXBmgSRjHKD-V63XbDy7ebZj1yo_jvk",
-  authDomain: "chat-2e055.firebaseapp.com",
-  databaseURL: "https://chat-2e055-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "chat-2e055",
-  storageBucket: "chat-2e055.firebasestorage.app",
-  messagingSenderId: "936045616832",
-  appId: "1:936045616832:web:f605f3c837dc46d9b15725",
-  measurementId: "G-KBY61TK1LZ"
-};
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.database();
 
-    let currentUser = null;
 
-    const loginBtn = document.getElementById("loginBtn");
-    const logoutBtn = document.getElementById("logoutBtn");
-    const userInfo = document.getElementById("userInfo");
-    const messagesDiv = document.getElementById("messages");
-    const chatControls = document.getElementById("chatControls");
+    <button type="button"ontouchstart="crightDown2()" 
+    ontouchend
+    ="setTimeout(crightUp2,1);"
+    >MoveB</button>
 
-    // 🔑 Google Login
-    loginBtn.onclick = () => {
-      const provider = new firebase.auth.GoogleAuthProvider();
-      auth.signInWithPopup(provider);
-    };
+    <button type="button"ontouchstart="drightDown2()" 
+    ontouchend
+    ="setTimeout(drightUp2,1);"
+    >MoveF</button>
+-->
 
-    logoutBtn.onclick = () => auth.signOut();
-
-    // 👤 Auth State
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        currentUser = user;
-        userInfo.innerText = `Angemeldet als: ${user.displayName}`;
-        loginBtn.style.display = "none";
-        logoutBtn.style.display = "inline";
-        chatControls.style.display = "block";
-        listenForMessages();
-      } else {
-        currentUser = null;
-        userInfo.innerText = "";
-        loginBtn.style.display = "inline";
-        logoutBtn.style.display = "none";
-        chatControls.style.display = "none";
-        messagesDiv.innerHTML = "";
-      }
-    });
-
-    // 📤 Nachricht senden
-    function sendMessage() {
-      const text = document.getElementById("messageInput").value.trim();
-      if (text && currentUser) {
-        db.ref("messages").push({
-          uid: currentUser.uid,
-          name: currentUser.displayName,
-          text: text,
-          timestamp: Date.now()
-        });
-        document.getElementById("messageInput").value = "";
-      }
-    }
-
-    // 📥 Nachrichten empfangen
-    function listenForMessages() {
-      db.ref("messages").off(); // alte Listener entfernen
-      messagesDiv.innerHTML = "";
-
-      db.ref("messages").orderByChild("timestamp").on("child_added", snapshot => {
-        const msg = snapshot.val();
-        const div = document.createElement("div");
-        div.className = "msg" + (msg.uid === currentUser.uid ? " own" : "");
-        div.innerText = `${msg.name}: ${msg.text}`;
-        
-        // 🗑 Nur eigene Nachricht löschbar
-        if (msg.uid === currentUser.uid) {
-          const del = document.createElement("span");
-          del.innerText = "[löschen]";
-          del.className = "delete-btn";
-          del.onclick = () => db.ref("messages/" + snapshot.key).remove();
-          div.appendChild(del);
-        }
-
-        messagesDiv.appendChild(div);
-        messagesDiv.scrollTop = messagesDiv.scrollHeight;
-      });
-    }
-  </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js"></script>
+ <script src="script.js"></script>
 </body>
+
+<!--
+</html>
+
+
+
+<!DOCTYPE HTML>
+
+<html>
+	<head>
+		<title>Joy</title>
+		<meta charset="utf-8">
+		<meta name="description" content="Example page of use pure Javascript JoyStick">
+		<meta name="author" content="Roberto D'Amico">
+		<link rel="shortcut icon" type="image/png" href="http://bobboteck.github.io/img/roberto-damico-bobboteck.png">
+
+-->
+
+<head>
+		<style>
+*
+{
+	box-sizing: border-box;
+}
+body
+{
+	margin: 0px;
+	padding: 0px;
+	font-family: monospace;
+   
+ 
+}
+.row
+{
+	display: inline-flex;
+	clear: both;
+}
+.columnLateral
+{
+  float: right;
+  width: 15%;
+  min-width: 300px;
+}
+.columnCetral
+{
+  float: right;
+  width: 70%;
+  min-width: 300px;
+}
+
+
+.container
+{ 
+  float: right;
+  width: 15%;
+  min-width: 300px;
+
+}
+
+#joy2Div
+{
+	width:200px;
+	height:200px;
+	margin:10%;
+  margin-top:20%;
+  
+}
+<
+
+#joystick2
+{
+	border: 1px solid #0000FF;
+}
+
+		</style>
+		<script src="script.js"></script>
+	</head>
+	<body>
+	
+	
+				
+		<!--	</div>-->
+<!--
+			<div class="columnLateral">
+--> 
+<button id="PAW" class="pauseButton">Pause</button>
+
+
+            <div class="container">
+				<div id="joy2Div"></div><!-- 
+				Posizione X:<input id="joy2PosizioneX" type="text" /></br>
+				Posizione Y:<input id="joy2PosizioneY" type="text" /></br>
+				Direzione:<input id="joy2Direzione" type="text" /></br>
+				X :<input id="joy2X" type="text" /></br>
+				Y :<input id="joy2Y" type="text" />
+			</div>			
+		</div> -->
+		<script type="text/javascript">
+// Create JoyStick object into the DIV 'joy1Div'
+//var Joy1 = new JoyStick('joy1Div');
+
+// Create JoyStick object into the DIV 'joy2Div'
+var joy2Param = { "title": "joystick2", "autoReturnToCenter": true };
+var Joy2 = new JoyStick('joy2Div', joy2Param);
+
+var joy2IinputPosX = document.getElementById("joy2PosizioneX");
+var joy2InputPosY = document.getElementById("joy2PosizioneY");
+var joy2Direzione = document.getElementById("joy2Direzione");
+var joy2X = document.getElementById("joy2X");
+var joy2Y = document.getElementById("joy2Y");
+
+setInterval(function(){ joy2IinputPosX.value=Joy2.GetPosX(); }, 50);
+setInterval(function(){ joy2InputPosY.value=Joy2.GetPosY(); }, 50);
+setInterval(function(){ joy2Direzione.value=Joy2.GetDir(); }, 50);
+setInterval(function(){ joy2X.value=Joy2.GetX(); }, 50);
+setInterval(function(){ joy2Y.value=Joy2.GetY(); }, 50);
+
+/*
+setInterval (function(){if(Joy2.GetPosX()<51)
+{alert();}},50);
+*/
+		</script>
+	</body>
 </html>
